Allow configuring mounter via storageclass parameter

--- a/deploy/kubernetes/storageclass.yaml
+++ b/deploy/kubernetes/storageclass.yaml
@@ -4,3 +4,7 @@ apiVersion: storage.k8s.io/v1
 metadata:
   name: csi-s3
 provisioner: ch.ctrox.csi.s3-driver
+parameters:
+  # specify which mounter to use
+  # can be set to s3backer, s3ql, s3fs or goofys
+  mounter: s3backer
