Feature/update to csi 1.0 (#9)
* updated all image to v1.0.1 csi

* Updated golang code to csi 1.0 compatible names

* added comment

--- a/deploy/kubernetes/attacher.yaml
+++ b/deploy/kubernetes/attacher.yaml
@@ -32,7 +32,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: csi-attacher-sa
-    namespace: default
+    namespace: kube-system
 roleRef:
   kind: ClusterRole
   name: external-attacher-runner
@@ -67,7 +67,7 @@ spec:
       serviceAccount: csi-attacher-sa
       containers:
         - name: csi-attacher
-          image: quay.io/k8scsi/csi-attacher:v0.2.0
+          image: quay.io/k8scsi/csi-attacher:v1.0.1
           args:
             - "--v=4"
             - "--csi-address=$(ADDRESS)"
