--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,6 +1,6 @@
 [[constraint]]
   name = "github.com/container-storage-interface/spec"
-  version = "0.3.0"
+  version = "1.0.0"
 
 [[constraint]]
   branch = "master"
@@ -12,7 +12,7 @@
 
 [[constraint]]
   name = "github.com/kubernetes-csi/csi-test"
-  version = "v0.3.0-1"
+  version = "v1.0.2"
 
 [[constraint]]
   branch = "master"
