Switch to go modules (#13)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,6 @@ image:
 variables:
   DOCKER_HOST: tcp://docker:2375
   DOCKER_DRIVER: overlay2
-  GO_PROJECT_BASE: /go/src/github.com/ctrox
-  GO_PROJECT_DIR: $GO_PROJECT_BASE/csi-s3
 
 stages:
   - build
@@ -14,10 +12,6 @@ stages:
 
 build:
   stage: build
-  before_script:
-  - mkdir -p $GO_PROJECT_BASE
-  - ln -s $CI_PROJECT_DIR $GO_PROJECT_BASE
-  - cd $GO_PROJECT_DIR
   script:
     - make build
 
@@ -27,4 +21,4 @@ test:
   services:
     - docker:dind
   script:
-    - docker run --rm --privileged -v $(pwd):$GO_PROJECT_DIR --device /dev/fuse ctrox/$CI_PROJECT_NAME:test
+    - docker run --rm --privileged -v $(pwd):/app --device /dev/fuse ctrox/csi-s3:test
