--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -7,21 +7,23 @@ RUN apt-get update && \
       git wget make && \
     rm -rf /var/lib/apt/lists/*
 
-RUN wget -q https://dl.google.com/go/go1.10.3.linux-amd64.tar.gz && \
-    tar -xf go1.10.3.linux-amd64.tar.gz && \
-    rm go1.10.3.linux-amd64.tar.gz && \
+RUN wget -q https://dl.google.com/go/go1.11.5.linux-amd64.tar.gz && \
+    tar -xf go1.11.5.linux-amd64.tar.gz && \
+    rm go1.11.5.linux-amd64.tar.gz && \
     mv go /usr/local
 
 ENV GOROOT /usr/local/go
 ENV GOPATH /go
 ENV PATH=$GOPATH/bin:$GOROOT/bin:$PATH
 
-# install dep
-RUN wget -q https://raw.githubusercontent.com/golang/dep/master/install.sh && \
-    mkdir -p /go/bin && \
-    sh ./install.sh
-
 RUN go get -u github.com/minio/minio && go install github.com/minio/minio/cmd
+
+WORKDIR /app
+
+# prewarm go mod cache
+COPY go.mod .
+COPY go.sum .
+RUN go mod download
 
 ADD test/test.sh /usr/local/bin
 
