--- a/deploy/kubernetes/secret.yaml
+++ b/deploy/kubernetes/secret.yaml
@@ -5,10 +5,10 @@ metadata:
 stringData:
   accessKeyID: <YOUR_ACCESS_KEY_ID>
   secretAccessKey: <YOUR_SECRET_ACCES_KEY>
-  # For AWS set it to "https://s3.amazonaws.com"
-  endpoint: <S3_ENDPOINT_URL>
+  # For AWS set it to "https://s3.<region>.amazonaws.com"
+  endpoint: https://s3.eu-central-1.amazonaws.com
   # If not on S3, set it to ""
   region: <S3_REGION>
   # Currently only for s3ql
   # If not using s3ql, set it to ""
-  encryptionKey: <FS_ENCRYPTION_KEY>
+  encryptionKey: ""
