Migrate to StatefulSet app/v1
Signed-off-by: Ching Yi, Chan <qrtt1@infuseai.io>

--- a/deploy/kubernetes/provisioner.yaml
+++ b/deploy/kubernetes/provisioner.yaml
@@ -53,13 +53,16 @@ spec:
       port: 12345
 ---
 kind: StatefulSet
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 metadata:
   name: csi-provisioner-s3
   namespace: kube-system
 spec:
   serviceName: "csi-provisioner-s3"
   replicas: 1
+  selector:
+    matchLabels:
+      app: csi-provisioner-s3
   template:
     metadata:
       labels:
