feat: make it compatible to k3s v1.19.5+k3s2
Signed-off-by: Toby Yan <me@tobyan.com>

--- a/deploy/kubernetes/attacher.yaml
+++ b/deploy/kubernetes/attacher.yaml
@@ -54,11 +54,14 @@ spec:
       port: 12345
 ---
 kind: StatefulSet
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 metadata:
   name: csi-attacher-s3
   namespace: kube-system
 spec:
+  selector:
+    matchLabels:
+      app: "csi-attacher-s3"
   serviceName: "csi-attacher-s3"
   replicas: 1
   template:
