--- a/deploy/kubernetes/secret.yaml.sample
+++ b/deploy/kubernetes/secret.yaml.sample
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
+  namespace: kube-system
   name: csi-s3-secret
 stringData:
   accessKeyID: <YOUR_ACCESS_KEY_ID>
