Update docker images
* Use go 1.16
* Use debian buster for dependencies

--- a/cmd/s3driver/Dockerfile
+++ b/cmd/s3driver/Dockerfile
@@ -1,4 +1,12 @@
-FROM debian:stretch
+FROM golang:1.16-alpine as gobuild
+
+WORKDIR /build
+ADD . /build
+
+RUN go get -d -v ./...
+RUN CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-extldflags "-static"' -o ./s3driver ./cmd/s3driver
+
+FROM debian:buster-slim
 LABEL maintainers="Cyrill Troxler <cyrilltroxler@gmail.com>"
 LABEL description="csi-s3 slim image"
 
@@ -16,5 +24,5 @@ RUN cd /tmp \
   && mv /tmp/rclone-*-linux-amd64/rclone /usr/bin \
   && rm -r /tmp/rclone*
 
-COPY ./_output/s3driver /s3driver
+COPY --from=gobuild /build/s3driver /s3driver
 ENTRYPOINT ["/s3driver"]
