--- a/deploy/kubernetes/csi-s3.yaml
+++ b/deploy/kubernetes/csi-s3.yaml
@@ -81,7 +81,7 @@ spec:
             capabilities:
               add: ["SYS_ADMIN"]
             allowPrivilegeEscalation: true
-          image: ctrox/csi-s3:dev
+          image: ctrox/csi-s3:v1.2.0-rc.1
           imagePullPolicy: Never
           args:
             - "--endpoint=$(CSI_ENDPOINT)"
