Fix Makefile and Dockerfiles

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -7,9 +7,10 @@ RUN apt-get update && \
   git wget make && \
   rm -rf /var/lib/apt/lists/*
 
-RUN wget -q https://golang.org/dl/go1.15.7.linux-amd64.tar.gz && \
-  tar -xf go1.15.7.linux-amd64.tar.gz && \
-  rm go1.15.7.linux-amd64.tar.gz && \
+ARG GOVERSION=1.16.3
+RUN wget -q https://golang.org/dl/go${GOVERSION}.linux-amd64.tar.gz && \
+  tar -xf go${GOVERSION}.linux-amd64.tar.gz && \
+  rm go${GOVERSION}.linux-amd64.tar.gz && \
   mv go /usr/local
 
 ENV GOROOT /usr/local/go
