--- a/cmd/s3driver/Dockerfile
+++ b/cmd/s3driver/Dockerfile
@@ -7,22 +7,24 @@ RUN go get -d -v ./...
 RUN CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-extldflags "-static"' -o ./s3driver ./cmd/s3driver
 
 FROM debian:buster-slim
-LABEL maintainers="Cyrill Troxler <cyrilltroxler@gmail.com>"
+LABEL maintainers="Vitaliy Filippov <vitalif@yourcmc.ru>"
 LABEL description="csi-s3 slim image"
 
-# s3fs and some other dependencies
+# patched goofys
+ADD goofys /usr/bin/
+
 RUN apt-get update && \
-  apt-get install -y \
-  s3fs curl unzip && \
+  apt-get install -y ca-certificates && \
   rm -rf /var/lib/apt/lists/*
 
-# install rclone
-ARG RCLONE_VERSION=v1.54.1
-RUN cd /tmp \
-  && curl -O https://downloads.rclone.org/${RCLONE_VERSION}/rclone-${RCLONE_VERSION}-linux-amd64.zip \
-  && unzip /tmp/rclone-${RCLONE_VERSION}-linux-amd64.zip \
-  && mv /tmp/rclone-*-linux-amd64/rclone /usr/bin \
-  && rm -r /tmp/rclone*
+# s3fs curl unzip
+## install rclone
+#ARG RCLONE_VERSION=v1.54.1
+#RUN cd /tmp \
+#  && curl -O https://downloads.rclone.org/${RCLONE_VERSION}/rclone-${RCLONE_VERSION}-linux-amd64.zip \
+#  && unzip /tmp/rclone-${RCLONE_VERSION}-linux-amd64.zip \
+#  && mv /tmp/rclone-*-linux-amd64/rclone /usr/bin \
+#  && rm -r /tmp/rclone*
 
 COPY --from=gobuild /build/s3driver /s3driver
 ENTRYPOINT ["/s3driver"]
