--- a/deploy/kubernetes/examples/storageclass.yaml
+++ b/deploy/kubernetes/examples/storageclass.yaml
@@ -5,9 +5,7 @@ metadata:
   name: csi-s3
 provisioner: ch.ctrox.csi.s3-driver
 parameters:
-  # specify which mounter to use
-  # can be set to rclone, s3fs, goofys or s3backer
-  mounter: rclone
+  mounter: goofys
   # to use an existing bucket, specify it here:
   # bucket: some-existing-bucket
   csi.storage.k8s.io/provisioner-secret-name: csi-s3-secret
