Change example endpoint to Yandex S3

--- a/deploy/kubernetes/examples/secret.yaml
+++ b/deploy/kubernetes/examples/secret.yaml
@@ -4,9 +4,9 @@ metadata:
   namespace: kube-system
   name: csi-s3-secret
 stringData:
-  accessKeyID: <YOUR_ACCESS_KEY_ID>
-  secretAccessKey: <YOUR_SECRET_ACCES_KEY>
-  # For AWS set it to "https://s3.<region>.amazonaws.com"
-  endpoint: https://s3.eu-central-1.amazonaws.com
-  # If not on S3, set it to ""
-  region: <S3_REGION>
+  accessKeyID: YOUR_ACCESS_KEY_ID
+  secretAccessKey: YOUR_SECRET_ACCESS_KEY
+  # For AWS set it to "https://s3.<region>.amazonaws.com", for example https://s3.eu-central-1.amazonaws.com
+  endpoint: https://storage.yandexcloud.net
+  # For AWS set it to AWS region
+  #region: ""
