--- a/deploy/kubernetes/examples/pvc.yaml
+++ b/deploy/kubernetes/examples/pvc.yaml
@@ -8,7 +8,7 @@ metadata:
   namespace: default
 spec:
   accessModes:
-  - ReadWriteOnce
+  - ReadWriteMany
   resources:
     requests:
       storage: 5Gi
