--- a/deploy/kubernetes/examples/pvc-manual.yaml
+++ b/deploy/kubernetes/examples/pvc-manual.yaml
@@ -5,7 +5,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: manualbucket/path
+  name: manualbucket-with-path
 spec:
   storageClassName: csi-s3
   capacity:
@@ -14,7 +14,7 @@ spec:
     - ReadWriteMany
   claimRef:
     namespace: default
-    name: manualclaim
+    name: csi-s3-manual-pvc
   csi:
     driver: ru.yandex.s3.csi
     controllerPublishSecretRef:
@@ -34,7 +34,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: csi-s3-pvc
+  name: csi-s3-manual-pvc
 spec:
   # Empty storage class disables dynamic provisioning
   storageClassName: ""
