--- a/deploy/helm/templates/storageclass.yaml
+++ b/deploy/helm/templates/storageclass.yaml
@@ -11,7 +11,9 @@ provisioner: ru.yandex.s3.csi
 parameters:
   mounter: geesefs
   options: "{{ .Values.storageClass.mountOptions }}"
+{{- if .Values.storageClass.singleBucket }}
   bucket: "{{ .Values.storageClass.singleBucket }}"
+{{- end }}
   csi.storage.k8s.io/provisioner-secret-name: {{ .Values.secret.name }}
   csi.storage.k8s.io/provisioner-secret-namespace: {{ .Release.Namespace }}
   csi.storage.k8s.io/controller-publish-secret-name: {{ .Values.secret.name }}
