Added support for a custom prefix

--- a/deploy/helm/templates/secret.yaml
+++ b/deploy/helm/templates/secret.yaml
@@ -9,3 +9,7 @@ stringData:
   secretAccessKey: {{ .Values.secret.secretKey }}
   endpoint: {{ .Values.secret.endpoint }}
 {{- end -}}
+{{- if .Values.secret.usePrefix }}
+  usePrefix: "true"
+{{- end }}
+  prefix: "{{ .Values.secret.prefix }}"
