--- a/deploy/kubernetes/csi-s3.yaml
+++ b/deploy/kubernetes/csi-s3.yaml
@@ -52,6 +52,13 @@ spec:
       labels:
         app: csi-s3
     spec:
+      tolerations:
+      - key: CriticalAddonsOnly
+        operator: Exists
+      - effect: NoExecute
+        operator: Exists
+      - effect: NoSchedule
+        operator: Exists    
       serviceAccount: csi-s3
       hostNetwork: true
       containers:
