deploy attacher to node of provisioner runs

--- a/deploy/helm/templates/attacher.yaml
+++ b/deploy/helm/templates/attacher.yaml
@@ -79,6 +79,13 @@ spec:
       tolerations:
       - key: node-role.kubernetes.io/master
         operator: "Exists"
+      affinity:
+        podAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchLabels:
+                  app: csi-provisioner-s3
+            topologyKey: kubernetes.io/hostname
       containers:
         - name: csi-attacher
           image: {{ .Values.images.attacher }}
