Remove NoExecute toleration for attacher, but add CriticalAddons back for provisioner and attacher

--- a/deploy/helm/templates/attacher.yaml
+++ b/deploy/helm/templates/attacher.yaml
@@ -77,8 +77,10 @@ spec:
     spec:
       serviceAccount: csi-attacher-sa
       tolerations:
-      - key: node-role.kubernetes.io/master
-        operator: "Exists"
+        - key: node-role.kubernetes.io/master
+          operator: Exists
+        - key: CriticalAddonsOnly
+          operator: Exists
       containers:
         - name: csi-attacher
           image: {{ .Values.images.attacher }}
