--- a/deploy/helm/templates/provisioner.yaml
+++ b/deploy/helm/templates/provisioner.yaml
@@ -72,6 +72,8 @@ spec:
       tolerations:
         - key: node-role.kubernetes.io/master
           operator: Exists
+        - key: CriticalAddonsOnly
+          operator: Exists
         {{- with .Values.tolerations.controller }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
