Add bucketLookup support

--- a/deploy/helm/templates/secret.yaml
+++ b/deploy/helm/templates/secret.yaml
@@ -8,4 +8,6 @@ stringData:
   accessKeyID: {{ .Values.secret.accessKey }}
   secretAccessKey: {{ .Values.secret.secretKey }}
   endpoint: {{ .Values.secret.endpoint }}
+  region: {{ .Values.secret.region }}
+  bucketLookup: {{ .Values.secret.bucketLookup }}
 {{- end -}}
