--- a/deploy/kubernetes/examples/secret.yaml
+++ b/deploy/kubernetes/examples/secret.yaml
@@ -10,3 +10,5 @@ stringData:
   endpoint: https://storage.yandexcloud.net
   # For AWS set it to AWS region
   #region: ""
+  # For S3-compatible set it to bucket lookup style (choices: Auto [default], DNS, Path)
+  #bucketLookup: ""
