--- a/deploy/kubernetes/examples/secret.yaml
+++ b/deploy/kubernetes/examples/secret.yaml
@@ -4,9 +4,9 @@ metadata:
   namespace: kube-system
   name: csi-s3-secret
 stringData:
-  accessKeyID: YOUR_ACCESS_KEY_ID
-  secretAccessKey: YOUR_SECRET_ACCESS_KEY
+  accessKeyID: AKIA9BBFD8B80EDE95981AE0C110BEZ10
+  secretAccessKey: 2djRg7pgU35oxWgwiM2CVD8fmTMwcX7HTOmq5ptW
   # For AWS set it to "https://s3.<region>.amazonaws.com", for example https://s3.eu-central-1.amazonaws.com
-  endpoint: https://storage.yandexcloud.net
+  endpoint: https://ds11s3.swisscom.com
   # For AWS set it to AWS region
   #region: ""
