--- a/deploy/helm/manifest.yaml
+++ b/deploy/helm/manifest.yaml
@@ -47,7 +47,7 @@ user_values:
   - name: storageClass.singleBucket
     title:
       en: Single S3 bucket for volumes
-      ru: Общий S3 бакет для томов
+      ru: Общий бакет S3 для томов
     description:
       en: Single S3 bucket to use for all dynamically provisioned persistent volumes
       ru: Общий бакет S3, в котором будут создаваться все динамически распределяемые тома. Если пусто, под каждый том будет создаваться новый бакет
@@ -104,9 +104,9 @@ user_values:
   - name: tolerations.all
     title:
       en: Tolerate all taints
-      ru: Игнорировать все taint-ы
+      ru: Игнорировать все политики taint
     description:
       en: Tolerate all taints by the CSI-S3 node driver (mounter)
-      ru: Игнорировать все taint-ы узлов кластера драйвером CSI-S3, монтирующим ФС на узлах
+      ru: Игнорировать все политики taint узлов кластера драйвером CSI-S3, монтирующим ФС на узлах
     boolean_value:
       default_value: false
